--- a/playbooks/pglogical/pglogical-workers-config.yml
+++ b/playbooks/pglogical/pglogical-workers-config.yml
@@ -2,14 +2,52 @@
   hosts: worker_nodes
   become: yes
   tasks:
-    # - name: Promote standby node to read-write mode
-    #   shell: "/usr/lib/postgresql/12/bin/pg_ctl promote -D /var/lib/postgresql/12/main"
-    #   become_user: postgres
-    #   ignore_errors: yes
+    - name: Create pglogical database
+      community.postgresql.postgresql_db:
+        name: pglogical_db
+        state: present
+        login_port: 6588
+      become_user: postgres
 
-    - name: Wait for promotion to complete
+    - name: Ensure pglogical database exists
+      community.postgresql.postgresql_query:
+        db: postgres
+        query: "SELECT 1 FROM pg_database WHERE datname = 'pglogical_db';"
+        login_port: 6588
+      become_user: postgres
+      register: db_check
+      failed_when: db_check.rowcount == 0
+
+    - name: Create pglogical user
+      community.postgresql.postgresql_user:
+        name: pglogical_user
+        password: "securepassword"
+        role_attr_flags: "LOGIN,REPLICATION"
+        state: present
+        login_port: 6588
+      become_user: postgres
+
+    - name: Ensure database is ready before granting privileges
       pause:
-        seconds: 10
+        seconds: 5  # Ensure the database is fully available
+
+    - name: Grant privileges on pglogical database
+      community.postgresql.postgresql_privs:
+        db: pglogical_db
+        privs: "ALL"
+        type: database
+        roles: pglogical_user
+        state: present
+        login_port: 6588
+      become_user: postgres
+
+    - name: Create pglogical extension
+      community.postgresql.postgresql_query:
+        db: pglogical_db
+        query: "CREATE EXTENSION IF NOT EXISTS pglogical;"
+        login_port: 6588
+      become_user: postgres
+
 
     - name: Add standby node to pglogical
       community.postgresql.postgresql_query:
