updated pglogical workers config

--- a/playbooks/pglogical/pglogical-workers-config.yml
+++ b/playbooks/pglogical/pglogical-workers-config.yml
@@ -32,6 +32,13 @@
       pause:
         seconds: 5  # Ensure the database is fully available
 
+    - name: Create pglogical extension
+      community.postgresql.postgresql_query:
+        db: pglogical_db
+        query: "CREATE EXTENSION IF NOT EXISTS pglogical;"
+        login_port: 6588
+      become_user: postgres
+
     - name: Grant full privileges on pglogical database
       community.postgresql.postgresql_privs:
         db: pglogical_db
@@ -64,19 +71,12 @@
         state: present
       become_user: postgres
 
-    - name: Create pglogical extension
-      community.postgresql.postgresql_query:
-        db: pglogical_db
-        query: "CREATE EXTENSION IF NOT EXISTS pglogical;"
-        login_port: 6588
-      become_user: postgres
-
     - name: Add standby node to pglogical
       community.postgresql.postgresql_query:
         db: pglogical_db
         query: |
           SELECT pglogical.create_node(
-            node_name := '{{ ansible_hostname }}1',
+            node_name := '{{ ansible_hostname }}',
             dsn := 'host={{ worker_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
           );
         login_port: 6588
@@ -96,7 +96,7 @@
         db: pglogical_db
         query: |
           SELECT pglogical.create_subscription(
-            subscription_name := 'subscription_{{ ansible_hostname }}1',
+            subscription_name := 'subscription_{{ ansible_hostname }}',
             provider_dsn := 'host={{ master_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
           );
         login_port: 6588
@@ -111,7 +111,7 @@
         db: pglogical_db
         query: |
           SELECT pglogical.create_subscription(
-            subscription_name := 'subscription_{{ ansible_hostname }}1',
+            subscription_name := 'subscription_{{ ansible_hostname }}',
             provider_dsn := 'host={{ other_worker_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
           );
         login_port: 6588
