--- a/playbooks/pglogical/pglogical-workers-config.yml
+++ b/playbooks/pglogical/pglogical-workers-config.yml
@@ -66,7 +66,7 @@
         privs: "SELECT"
         type: table
         roles: pglogical_user
-        objs: "public.*"
+        objs: "*"
         login_port: 6588
         state: present
       become_user: postgres
