--- a/playbooks/pglogical/pglogical-workers-config.yml
+++ b/playbooks/pglogical/pglogical-workers-config.yml
@@ -97,7 +97,7 @@
         db: pglogical_db
         query: |
           SELECT pglogical.create_subscription(
-            subscription_name := 'subscription_{{ ansible_hostname }}',
+            subscription_name := 'subscription_{{ ansible_hostname | lower }}',
             provider_dsn := 'host={{ master_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
           );
         login_port: 6588
@@ -112,7 +112,7 @@
         db: pglogical_db
         query: |
           SELECT pglogical.create_subscription(
-            subscription_name := 'subscription_{{ ansible_hostname }}',
+            subscription_name := 'subscription_{{ ansible_hostname | lower }}_other',
             provider_dsn := 'host={{ other_worker_private_ip }} port=6588 dbname=pglogical_db user=pglogical_user password=securepassword'
           );
         login_port: 6588
