--- a/main_playbook.yml
+++ b/main_playbook.yml
@@ -4,6 +4,7 @@
 - import_playbook: playbooks/repmgr/repmgr_standby.yml
 - import_playbook: playbooks/pglogical/pglogical-master-config.yml
 - import_playbook: playbooks/pglogical/pglogical-workers-config.yml
+- import_playbook: playbooks/pglogical/pglogical-master-subscribe-other-nodes.yml
 - import_playbook: playbooks/pglogical/pglogical-status-check.yml
 - import_playbook: playbooks/kubernetes/kube-config-master.yml
 - import_playbook: playbooks/kubernetes/kube-join-worker.yml
