--- a/playbooks/repmgr/repmgr_standby.yml
+++ b/playbooks/repmgr/repmgr_standby.yml
@@ -13,24 +13,6 @@
         regexp: '^#?listen_addresses\s*=\s*.*'
         line: "listen_addresses = '*'"
         backup: yes
-        
-    - name: Ensure pglogical is in shared_preload_libraries
-      lineinfile:
-        path: /etc/postgresql/12/main/postgresql.conf
-        regexp: '^#?shared_preload_libraries\s*='
-        line: "shared_preload_libraries = 'pglogical'"
-        backup: yes
-
-    - name: Configure PostgreSQL settings for pglogical
-      blockinfile:
-        path: /etc/postgresql/12/main/postgresql.conf
-        block: |
-          wal_level = 'logical'
-          max_replication_slots = 10
-          max_wal_senders = 10
-          wal_keep_segments = 256
-          track_commit_timestamp = on
-          wal_log_hints = on
 
     - name: Ensure pg_hba.conf allows repmgr
       blockinfile:
@@ -45,8 +27,6 @@
           host  replication       {{ repmgr_user }}  {{ network_subnet_worker2 }}  md5
           host    repmgr  repmgr  0.0.0.0/0  md5
           host    replication  repmgr  0.0.0.0/0  md5
-          host    replication     pglogical_user    0.0.0.0/0     md5
-          host    all             pglogical_user    0.0.0.0/0     md5
 
     - name: Restart PostgreSQL immediately
       systemd:
@@ -81,18 +61,18 @@
         state: stopped
       ignore_errors: true
 
-    # - name: Clone standby from master
-    #   shell: >
-    #     sudo -u postgres env PGPASSWORD={{ repmgr_password }}
-    #     repmgr
-    #     -h {{ master_private_ip }}
-    #     -p 6588
-    #     -U {{ repmgr_user }}
-    #     -d {{ repmgr_db }}
-    #     -f {{ repmgr_config_path }}
-    #     standby clone
-    #     {% if copy_ext_config | bool %} --copy-external-config-files {% endif %}
-    #     --force
+    - name: Clone standby from master
+      shell: >
+        sudo -u postgres env PGPASSWORD={{ repmgr_password }}
+        repmgr
+        -h {{ master_private_ip }}
+        -p 6588
+        -U {{ repmgr_user }}
+        -d {{ repmgr_db }}
+        -f {{ repmgr_config_path }}
+        standby clone
+        {% if copy_ext_config | bool %} --copy-external-config-files {% endif %}
+        --force
 
     - name: Start PostgreSQL on standby
       systemd:
@@ -100,11 +80,11 @@
         state: started
         enabled: yes
 
-    # - name: Register standby node with repmgr
-    #   shell: >
-    #     sudo -u postgres repmgr
-    #     -f {{ repmgr_config_path }}
-    #     standby register
-    #   register: standby_register
-    #   failed_when: "standby_register.rc not in [0,1]"
-    #   changed_when: standby_register.rc == 0
+    - name: Register standby node with repmgr
+      shell: >
+        sudo -u postgres repmgr
+        -f {{ repmgr_config_path }}
+        standby register
+      register: standby_register
+      failed_when: "standby_register.rc not in [0,1]"
+      changed_when: standby_register.rc == 0
