--- a/playbooks/tasks/installations/postgresql.yml
+++ b/playbooks/tasks/installations/postgresql.yml
@@ -32,11 +32,10 @@
   apt:
     update_cache: yes
 
-- name: Install PostgreSQL 12 and pglogical
+- name: Install PostgreSQL 12
   apt:
     name:
       - postgresql-12
-      - postgresql-12-pglogical
     state: present
 
 - name: Change PostgreSQL port in postgresql.conf
