--- a/playbooks/tasks/installations/postgresql.yml
+++ b/playbooks/tasks/installations/postgresql.yml
@@ -42,7 +42,7 @@
   lineinfile:
     path: /etc/postgresql/12/main/postgresql.conf
     regexp: '^#?port\s*=\s*.*'
-    line: "port = 6588"
+    line: "port = {{ pg_port }}"
     backup: yes
 
 - name: Restart PostgreSQL to apply changes
@@ -56,9 +56,9 @@
     state: started
     enabled: yes
 
-- name: Verify PostgreSQL is running on port 6588
-  shell: "ss -tulnp | grep :6588"
+- name: Verify PostgreSQL is running on port {{ pg_port }}
+  shell: "ss -tulnp | grep :{{ pg_port }}"
   register: postgres_port_check
 
 - debug:
-    msg: "PostgreSQL is now listening on port 6588: {{ postgres_port_check.stdout }}"
+    msg: "PostgreSQL is now listening on port {{ pg_port }}: {{ postgres_port_check.stdout }}"
