--- a/inventory.example
+++ b/inventory.example
@@ -1,13 +1,15 @@
 [master_nodes]
-master ansible_host=192.168.1.224 ansible_user=vagrant repmgr_node_id=1 repmgr_node_name=master
+master ansible_host= ansible_user= repmgr_node_id=1 repmgr_node_name=master
 
 [worker_nodes]
-worker1 ansible_host=192.168.1.233 worker_private_ip=10.0.0.5 ansible_user=vagrant repmgr_node_id=2 repmgr_node_name=worker1
-worker2 ansible_host=192.168.1.251 worker_private_ip=10.0.0.6 ansible_user=vagrant repmgr_node_id=3 repmgr_node_name=worker2
+worker1 ansible_host= worker_private_ip= ansible_user= repmgr_node_id=2 repmgr_node_name=worker1
+worker2 ansible_host= worker_private_ip= ansible_user= repmgr_node_id=3 repmgr_node_name=worker2
 
 [all:vars]
-master_private_ip=10.0.0.4
-worker1_private_ip=10.0.0.5
-worker2_private_ip=10.0.0.6
-pg_port=6588
+master_private_ip=
+worker1_private_ip=
+worker2_private_ip=
+pg_port=
+jumpserver_ip=
+jumpserver_public_ip=
 ansible_python_interpreter=/usr/bin/python3
