--- a/main_playbook.yml
+++ b/main_playbook.yml
@@ -4,3 +4,4 @@
 - import_playbook: playbooks/repmgr/repmgr_standby.yml
 - import_playbook: playbooks/kubernetes/kube-config-master.yml
 - import_playbook: playbooks/kubernetes/kube-join-worker.yml
+- import_playbook: playbooks/harden_jumpserver_assets.yml
