--- a/main_playbook.yml
+++ b/main_playbook.yml
@@ -1,7 +1,9 @@
 ---
 - import_playbook: playbooks/tools_installation_playbook.yml
-- import_playbook: playbooks/repmgr/repmgr_primary.yml
-- import_playbook: playbooks/repmgr/repmgr_standby.yml
+- import_playbook: playbooks/patroni/etcd-config.yml
+- import_playbook: playbooks/patroni/patroni-config.yml
+# - import_playbook: playbooks/repmgr/repmgr_primary.yml
+# - import_playbook: playbooks/repmgr/repmgr_standby.yml
 - import_playbook: playbooks/kubernetes/kube-config-master.yml
 - import_playbook: playbooks/kubernetes/kube-join-worker.yml
 - import_playbook: playbooks/harden_jumpserver_assets.yml
