--- a/playbooks/tasks/installations/init.yml
+++ b/playbooks/tasks/installations/init.yml
@@ -2,4 +2,5 @@
   - include_tasks: ./docker.yml
   - include_tasks: ./kubernetes.yml
   - include_tasks: ./postgresql.yml
-  - include_tasks: ./repmgr.yml
+  # - include_tasks: ./repmgr.yml
+  - include_tasks: ./patroni.yml
