--- a/playbooks/tasks/installations/patroni.yml
+++ b/playbooks/tasks/installations/patroni.yml
@@ -7,11 +7,10 @@
   apt:
     name:
       - python3-pip
-      - etcd
       - libpq-dev
     state: present
 
-- name: Install Patroni via pip3
-  pip:
-    name: "patroni==2.1.1"
-    executable: pip3
+- name: Install Patroni via apt
+  apt:
+    name: patroni
+    state: present
