--- a/playbooks/kubernetes/kube-config-master.yml
+++ b/playbooks/kubernetes/kube-config-master.yml
@@ -45,6 +45,6 @@
 
 
     - name: Apply Flannel CNI
-      shell: KUBECONFIG=/home/{{ ansible_user }}/.kube/config kubectl apply --validate=false -f https://raw.githubusercontent.com/flannel-io/flannel/master/Documentat>
+      shell: KUBECONFIG=/home/{{ ansible_user }}/.kube/config kubectl apply --validate=false -f https://raw.githubusercontent.com/flannel-io/flannel/master/Documentation/kube-flannel.yml
       become: yes
       become_user: "{{ ansible_user }}"
