--- a/playbooks/tasks/installations/test-mongodb.yml
+++ b/playbooks/tasks/installations/test-mongodb.yml
@@ -18,7 +18,8 @@
     msg: "MongoDB écoute sur le port 27017"
 
 - name: Test MongoDB connection (without authentication)
-  command: "mongo --quiet --eval \"db.runCommand({{ '{' }} ping: 1 {{ '}' }})\""
+  shell: |
+    mongo --quiet --eval 'db.runCommand({ ping: 1 })'
   register: mongo_ping
   failed_when: "'ok' not in mongo_ping.stdout"
   changed_when: false
